# dagster_portada_project

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
dagster_portada_project/: __init__.py  dagster_portada_data_layer.py  definitions.py  definitions2.py  dg.yaml  utilities.py
dagster_portada_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dagster_portada_project/assets/: __init__.py  boat_fact_cleaning_assets.py  boat_fact_ingestion_assets.py  entity_ingestion_assets.py
dagster_portada_project/config/: delta_data_layer_config.json
dagster_portada_project/resources/: delta_data_layer_resource.py
dagster_portada_project/sensors/: ingestion_sensors.py
dagster_portada_project_tests/: cleaning.py  definitions.py  main.py
docs/: api-reference.md  arquitectura.md  assets.md  desarrollo.md  ejemplos.md  glosario.md  index.md  instalacion.md  introduccion.md  jobs-sensors.md  resources.md  troubleshooting-sensores.md
